# Setuptools & pbr is used to facilitate packaging, dependency, & installation
# of Python projects and its dependencies.

[metadata]
name = dluxAlgorithms
version = 1.0.0
summary = Packaging a python project with algorithm code exercises
description-file = README.rst
author = Luz Cazares
author_email = tmp@dlux.com
home-page  = https://github.com/dlux/algorithms
test_suite = tests
keywords = 
    dlux
    algorithms
    mypackage
classifier = 
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Quality Engineers
    Intended Audience :: Information Technology
    License :: Free For Educational Use
    Operating System :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages = find_packages()

[entry_points]
console_scripts =
    dlux_alg = src.cmd.main:main
dlux_alg.cm =
    union-find = src.cmd.client_union_find:UNIONFIND
